[package]
name = "hacker-news-cli"
version = "0.0.1"
edition = "2018"
authors = ["cljacoby <cljacoby@gmail.com>"]
description = "A command line interface to interact with Hacker News."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacker-news = "0.1.0"
